overflow fix

--- a/src/app.css
+++ b/src/app.css
@@ -6,7 +6,11 @@
   box-sizing: inherit;
   -webkit-tap-highlight-color: transparent;
 }
-
+html, body {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
 a {
   color: inherit;
   text-decoration: none;
@@ -95,12 +99,17 @@ p {
   margin-right: auto;
   padding-left: 1rem;
   padding-right: 1rem;
+  box-sizing: border-box;
 }
 
 .underscore {
   background-color: #5e5e5e;
   height: 4px;
   width: 40px;
+}
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 .link {
